--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-    <load ="partials/test.html" />
-
+    <load src="partials/header.html" />
+    <load src="partials/footer.html" />
     <script type="module" src="/main.js"></script>
   </body>
 </html>
