--- a/src/favorite-cocktails.html
+++ b/src/favorite-cocktails.html
@@ -13,9 +13,7 @@
   </head>
   <body>
     <load src="partials/header.html" />
-    <load src="partials/hero.html" />
-    <load src="partials/search.html" />
-    <load src="partials/cocktails.html" />
+    <load src="partials/favor-cockt.html" />
     <load src="partials/footer.html" />
     <script type="module" src="/main.js"></script>
   </body>
