--- a/src/favorite-ingredients.html
+++ b/src/favorite-ingredients.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="change-theme">
     <load src="partials/header.html" />
     <load src="partials/favor-ingred.html" />
     <load src="partials/footer.html" />
