--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <load src="partials/cocktails.html" />
     <load src="partials/footer.html" />
     <load src="partials/modal-cocktail.html" />
+    <load src="partials/modal-ingredients.html" />
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
