--- a/src/favorite-ingredients.html
+++ b/src/favorite-ingredients.html
@@ -21,7 +21,7 @@
     <load src="partials/favor-ingred.html" />
     <load src="partials/modal-cocktail.html" />
 
-    <load src="partials/modal-ingredients.html" />
+    <!-- <load src="partials/modal-ingredients.html" /> -->
 
     <load src="partials/footer.html" />
     <script type="module" src="./script-favorite-ingredient.js"></script>
